# nn-zero-to-hero

./: .gitignore  README.md  pyproject.toml
data/: names_finnish.txt
nn_zero_to_hero/: datasets.py  layers.py  loss.py  makemore_part2_mlp_hyperparameter_tuning.py  makemore_part2_mlp_lightning.py  makemore_part2_mlp_native.py  makemore_part3_mlp_deep_param_logging.py  makemore_part5_wave.py  makemore_part5_wave_hyperparameter_tuning.py  models.py  optimizers.py  tokens.py  trainers.py  vizs.py
nn_zero_to_hero/notebooks/: makemore_part2_mlp.ipynb
notebooks/: makemore_part2_mlp.ipynb
