[tool.poetry]
name = "nn-zero-to-hero"
version = "0.1.0"
description = ""
authors = ["Tomi Kasurinen <tomi.kasurinen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.2"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
tqdm = "^4.66.2"
optuna = "^3.6.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
notebook = "^7.1.2"
nbstripout = "^0.7.1"
black = {extras = ["jupyter"], version = "^24.3.0"}
optuna-dashboard = "^0.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
