[tool.poetry]
name = "nn-zero-to-hero"
version = "0.1.0"
description = ""
authors = ["Tomi Kasurinen <tomi.kasurinen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "*"
matplotlib = "*"
numpy = "*"
tqdm = "*"
optuna = "*"
pandas = "*"
lightning = "*"
schedulefree = "*"
tensorboard = "*"
torch-tb-profiler = "*"
click = "*"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
notebook = "^7.1.2"
nbstripout = "^0.7.1"
black = {extras = ["jupyter"], version = "^24.3.0"}
optuna-dashboard = "^0.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
